# ba_ooh_ads

./: .dockerignore  .gitignore  DEBUGGING_SUMMARY.md  Dockerfile  Makefile  README.md  debug_dashboard.py  docker-compose.yml  pack_repo.py  pyproject.toml  repositorio_final.md
app/: app.py  app_folium_backup.py  old.py
notebooks/: check_consolidate_ads.ipynb  check_dbscan.ipynb  check_osm.ipynb  check_spatial_joins.ipynb  check_trips.ipynb  mapa.html  redatamx.r
src/: config.py  main.py
src/etl/ads/: consolidate_ads.py  consolidate_ads.py.bak  extract_ads.py  geocoding_ads.py  transform_ads.py
src/etl/pois/: centrality_clustering.py  extract_osm_pois.py  pois_macro_categories.py
src/etl/population/: extract_census_data.py  extract_govmaps.py  population_reach.py
src/utils/: utils_spatial.py
tests/: conftest.py  test_spatial.py
tests/integration/: test_ads_pipeline.py
tests/unit/: test_ads_functions.py  test_geocoding_service.py
